Amended HTML and completed CSS

--- a/index.html
+++ b/index.html
@@ -6,75 +6,69 @@
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
-    <header>
-      <img src="assets/img/the-flatiron-building.png" alt="Picture of Buildings">
+    <div class="hero">
       <h1>Broadway Design</h1>
-      <nav>
-        <ul class="navList">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#process">Process</a></li>
-          <li><a href="#work">Work</a></li>
-          <li><a href="#team">Team</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
+
+          <p><a class="navLink" href="#">Home</a></p>
+          <p><a class="navLink" href="#process">Process</a></p>
+          <p><a class="navLink" href="#work">Work</a></p>
+          <p><a class="navLink" href="#team">Team</a></p>
+          <p><a class="navLink" href="#contact">Contact</a></p>
+    </div>
     <!--PROCESS-->
-    <section id="process">
+    <div class="about" id="process">
       <h2>Our Process</h2>
-      <div class="identify">
+      <div class="about-item">
         <img src="assets/img/identify.svg" alt="Identify Icon">
         <h3>Identify</h3>
         <p>We focus on the most important details.</p>
       </div>
-      <div class="understand">
+      <div class="about-item">
         <img src="assets/img/understand.svg" alt="Understand Icon">
         <h3>Understand</h3>
         <p>We study our projects inside and out.</p>
       </div>
-      <div class="execute">
+      <div class="about-item">
         <img src="assets/img/execute.svg" alt="Execute Icon">
         <h3>Execute</h3>
         <p>We put everything we have into our work.</p>
       </div>
-    </section>
-    <div class="designedIn">
-      <img src="assets/img/the-flatiron-building.png" alt="">
+    </div>
+    <div class="hero">
       <h3>Designed in New York</h3>
     </div>
-    <!--WORK-->
-    <section id="work">
-      <div class="portfolio">
+
+    <div class="about" id="work">
+      <div class="about-item">
         <h3>Portfolio</h3>
         <p>Coming Soon</p>
       </div>
-    </section>
-    <!--TEAM-->
-    <section id="team">
-      <div class="team">
+    </div>
+    <div class="about" id="team">
+      <div class="about-item">
         <h3>Team</h3>
         <p>We're Hiring!</p>
       </div>
-    </section>
+    </div>
     <!--CONTACT-->
-    <section id="contact">
-      <div class="contact">
+    <div class="about" id="contact">
+      <div class="about-item">
         <h3>Contact</h3>
         <p>Phone: (555)-555-5555</p>
         <p>E-mail: test@example.com</p>
         <p>Twitter: @test</p>
       </div>
-    </section>
+    </div>
     <!--FOOTER-->
-    <footer>
-      <p>&copy; Broadway 2016</p>
-      <div class="footerLinks">
-        <a href="index.html">Home</a>
-        <a href="#process">About</a>
-        <a href="#work">Work</a>
-        <a href="#team">Team</a>
-        <a href="#contact">Contact</a>
-      </div>
-    </footer>
+    <div class="footer">
+      <p>
+        &copy; Broadway 2018
+        <a class="navLink" href="#">Home</a>
+        <a class="navLink" href="#process">About</a>
+        <a class="navLink" href="#work">Work</a>
+        <a class="navLink" href="#team">Team</a>
+        <a class="navLink" href="#contact">Contact</a>
+      </p>
+    </div>
   </body>
 </html>
